# homework_13_1

./: .gitignore  pyproject.toml
src/: Category.py  Product.py  README.md  README_1.md  README_2.md
tests/: test_category.py  test_product.py
utils/: utils.py
